Added blur to overlay

--- a/src/components/shared.scss
+++ b/src/components/shared.scss
@@ -3,6 +3,7 @@
 
 :root {
     --spacing-none: 0;
+    --spacing-3xs: 0.15rem;
     --spacing-2xs: 0.25rem;
     --spacing-xs: 0.5rem;
     --spacing-s: 0.75rem;
@@ -11,7 +12,10 @@
     --spacing-xl: 2rem;
     --spacing-2xl: 2.5rem;
     --spacing-3xl: 3rem;
-    --spacing-4xl: 4rem;
+    --spacing-4xl: 3.5rem;
+    --spacing-5xl: 4rem;
+    --spacing-6xl: 4.5rem;
+    --spacing-7xl: 5rem;
 }
 
 *,
